Quartz sync: Jun 9, 2024, 7:17 PM

--- a/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-8VL-07-06-2024/RNVS-8VL-07-06-2024.md
+++ b/content/4.Semester/Informatik/RNVS/RNVS-Vorlesung/RNVS-8VL-07-06-2024/RNVS-8VL-07-06-2024.md
@@ -7,7 +7,7 @@ fach: "[[Rechnernetze und Verteilte Systeme (RNVS)]]"
 Thema:
 Benötigte Zeit:
 date created: Friday, 7. June 2024, 09:30
-date modified: Friday, 7. June 2024, 15:49
+date modified: Sunday, 9. June 2024, 19:14
 ---
 
 Anfang Kapitel 3 S. 150
@@ -240,17 +240,311 @@ Ja, Sende- und Empfangsfenster können unterschiedlich groß sein. Der Grund daf
 KAPITEL 3 ENDE
 </center>
 
+# Kapitel 4: Die Vermittlungsschicht
+
+## Teil 1: Einführung in die Vermittlungsschicht
+
+### Einführung
+
+Herzlich Willkommen zur Vorlesung „Rechnernetze und Verteilte Systeme“. Heute beginnen wir mit Kapitel 4, das sich mit der Vermittlungsschicht befasst. Dies ist der erste Teil des Kapitels. Wir erinnern uns, dass wir beim letzten Mal Kapitel 3 abgeschlossen haben, das sich mit der Transportschicht beschäftigte. Dabei haben wir untersucht, wie ein netzunabhängiger Transport von Nachrichten zwischen Endsystemen funktioniert. Heute gehen wir eine Schicht tiefer zur Vermittlungsschicht und beschäftigen uns damit, wie Daten von der Quelle zum Ziel gebracht werden, also wie die Daten über Zwischenknoten vermittelt werden.
+
+### Ziele der Vermittlungsschicht
+
+Das Hauptziel der Vermittlungsschicht besteht in zwei wesentlichen Aktivitäten:
+
+1. **Fahrtschaltung (Vermittlung selbst)**
+2. **Wegewahl (Routing)**
+
+Wir beginnen mit einem einfachen Beispiel: Alice sendet eine Nachricht an Bob. Bisher haben wir nur Alice und Bob betrachtet und wie Nachrichten zwischen den beiden ausgetauscht werden. Jetzt wollen wir einen Blick in das Netzwerk werfen und untersuchen, wie das Internet tatsächlich funktioniert.
+
+### Schichtenmodell und die Vermittlungsschicht
+
+Unser Schichtenmodell zeigt, dass eine Anwendung einen Befehl an die Anwendungsschicht sendet, z.B. „SendHTTP-Request“. Diese Befehl wird an die Transportschicht weitergeleitet, die sich um Host und Port kümmert. Von dort geht es weiter zur Vermittlungsschicht, die die Adresse und die Nachricht selbst enthält.
+
+Wenn wir das ISO/OSI-Referenzmodell betrachten, sehen wir, dass die Vermittlungsschicht (Schicht 3) sich unter der Transportschicht (Schicht 4) befindet. Während die Transportschicht eine virtuelle Verbindung zwischen den Endsystemen schafft, stellt die Vermittlungsschicht eine reale Verbindung her, indem sie Daten über verschiedene Knoten im Netzwerk überträgt.
+
+### Kommunikation über Zwischenknoten
+
+Auf der Vermittlungsschicht wird die Nachricht nicht nur von Endsystem zu Endsystem übertragen, sondern über mehrere Zwischenknoten. Jeder Knoten muss entscheiden, ob er der Empfänger der Nachricht ist oder ob er sie weiterleiten muss. Dieses Weiterleiten erfolgt von einem Knoten zum nächsten, bis die Nachricht ihr Ziel erreicht.
+
+Die Herausforderung besteht darin, den besten Weg durch das Netzwerk zu finden. Dies geschieht durch Routing, das zwei Aspekte umfasst:
+
+1. **Vermittlung (Fahrtschaltung)**
+2. **Wegewahl (Routing)**
+
+### Netzwerktopologien und Vermittlung
+
+Es gibt verschiedene Netzwerktopologien, wie Punkt-zu-Punkt-Verbindungen, Bus-Topologien, Stern-Topologien, Ring-Topologien und vermaschte Netze. In der Praxis haben wir oft eine teilweise Vermaschung, wo bestimmte Verbindungen bestehen und andere vermieden werden müssen.
+
+Eine höhere Abstraktionsstufe ermöglicht es uns, komplexe Netzwerke in Subnetze zu unterteilen. Jedes Subnetz kann wiederum eigene Vermittlungsverfahren haben, und die genaue Topologie innerhalb eines Subnetzes ist den Endsystemen außerhalb unbekannt.
+
+### Verbundnetze und Internetworking
+
+Ein großes vermittelndes Netz, das aus vielen kleineren vermittelten Netzen besteht, nennt man ein Verbundnetz. Ein bekanntes Beispiel dafür ist das Internet. Gateway-Router an den Rändern dieser Netze sorgen für die Aufnahme und Weitergabe von Nachrichten. Das Zusammenführen dieser vermittelten Netze nennt man Internetworking.
+
+### Zusammenfassung und Ausblick
+
+In diesem ersten Teil des Kapitels haben wir die grundlegende Aufgabe der Vermittlungsschicht beschrieben: die Übertragung von Daten von der Quelle zum Ziel. Im nächsten Schritt werden wir uns genauer mit den Mechanismen der Vermittlung und der Wegewahl befassen.
+
+---
+
+## Teil 2: Fahrtschaltung und Vermittlungstechniken
+
+### Einführung
+
+Herzlich Willkommen zur Vorlesung „Rechnernetze und Verteilte Systeme“. Wir befinden uns im Kapitel 4 „Vermittlung“ und dies ist der zweite Teil von Kapitel 4. Wie erwähnt haben wir uns angeschaut, wie die Übertragung von Daten von der Quelle zum Ziel über die Transitknoten geht. In diesem Teil 2 wollen wir uns anschauen, wie die Vermittlung, die Fahrtschaltung, funktioniert.
+
+### Leitungsvermittlung
+
+Bei der **Leitungsvermittlung** werden Ressourcen entlang eines festen Pfades im Netz reserviert und für die Dauer der Übertragung blockiert. Ein bekanntes Beispiel ist das analoge Telefonnetz (POTS - Plain Old Telephone Service). Hier werden Verbindungen vorab aufgebaut und für die gesamte Dauer der Übertragung beibehalten.
+
+**Vorteile der Leitungsvermittlung**:
+
+- Dedizierter Kanal garantiert keine Warteschlangen.
+- Dienstgüte kann einfach garantiert werden.
+
+**Nachteile der Leitungsvermittlung**:
+
+- Der gesamte Pfad muss vor der Datenübertragung eingerichtet werden.
+- Bei Unterbrechung eines Teilstücks bricht die gesamte Verbindung zusammen.
+- Reservierte Ressourcen können nicht von anderen verwendet werden.
+
+### Paketvermittlung
+
+Bei der **Paketvermittlung** werden Nachrichten in Pakete aufgeteilt und diese einzeln übertragen. Es wird keine Ressource vorab reserviert. Pakete werden nacheinander gesendet und können unterschiedliche Wege nehmen.
+
+**Vorteile der Paketvermittlung**:
+
+- Keine Notwendigkeit eines Verbindungsaufbaus vorab.
+- Ressourcen werden effizient genutzt, da ungenutzte Bandbreiten von anderen verwendet werden können.
+
+**Nachteile der Paketvermittlung**:
+
+- Notwendigkeit, Header-Informationen zu jedem Paket hinzuzufügen.
+- Reihenfolge der Pakete kann variieren.
+- Schwierigkeit, Dienstgüte zu garantieren.
+
+### Store-and-Forward-Verfahren
+
+Ein spezielles Verfahren der Paketvermittlung ist das **Store-and-Forward-Verfahren**. Hier werden ganze Nachrichten zwischengespeichert und dann weitergeleitet. Dies erfordert große Pufferspeicher in den Transitknoten und ist sinnvoll bei verzögerungstoleranten Netzen.
+
+**Vorteile des Store-and-Forward-Verfahrens**:
+
+- Funktioniert gut in Netzen mit intermittierender Konnektivität (z.B. Satellitenkommunikation).
+- E-Mails werden typischerweise auf diese Weise übertragen.
+
+**Nachteile des Store-and-Forward-Verfahrens**:
+
+- Lange Verzögerungen, da die gesamte Nachricht zwischengespeichert wird.
+- Große Nachrichten können Wegstücke lange blockieren.
+- Notwendigkeit großer Pufferspeicher.
+
+### Vergleich der Vermittlungsverfahren
+
+| Merkmal                 | Leitungsvermittlung    | Paketvermittlung |
+| ----------------------- | ---------------------- | ---------------- |
+| Verbindungsaufbau       | Notwendig              | Nicht notwendig  |
+| Pfad                    | Fest                   | Dynamisch        |
+| Reihenfolge             | Garantiert             | Nicht garantiert |
+| Fehleranfälligkeit      | Hoch                   | Niedrig          |
+| Bandbreitenreservierung | Fix                    | Dynamisch        |
+| Datenstau               | Beim Verbindungsaufbau | Jederzeit        |
+| Ressourcennutzung       | Ineffizient            | Effizient        |
+
+## Zusammenfassung und Ausblick
+
+In diesem zweiten Teil des Kapitels haben wir die beiden Hauptverfahren der Vermittlung - Leitungsvermittlung und Paketvermittlung - sowie das Store-and-Forward-Verfahren vorgestellt. Jedes dieser Verfahren hat spezifische Vor- und Nachteile, die je nach Anwendungsszenario unterschiedlich relevant sind. Im nächsten Teil werden wir uns genauer mit den Protokollen und Mechanismen der Paketvermittlung im Internet beschäftigen.
+
+Bleiben Sie gesund und wir sehen uns dann beim Teil 3. Vielen Dank.
+
+---
+
+## Teil 3: Verzögerungsarten in vermittelten Netzen
+
+### Einführung
+
+Herzlich Willkommen zur Vorlesung „Rechnernetze und Verteilte Systeme“. Wir sind im Kapitel 4 „Vermittlung“ und das ist nun Teil 3 des Kapitels. In diesem Teil betrachten wir die Verzögerungsarten in vermittelten Netzen.
+
+### Verzögerungsarten
+
+Es gibt mehrere Arten von Verzögerungen, die in vermittelten Netzen auftreten:
+
+1. **Verarbeitungsverzögerung**
+2. **Warteschlangenverzögerung**
+3. **Übertragungsverzögerung**
+4. **Signalverzögerung (Signalausbreitung)**
+
+Zusätzlich betrachten wir die gesamte Netzverzögerung, die die Summe aller oben genannten Verzögerungen darstellt, sowie die Paketumlaufverzögerung (Roundtrip Delay, RTD).
+
+### Verarbeitungsverzögerung
+
+Die **Verarbeitungsverzögerung** ist die Zeit, die ein System benötigt, um ein ankommendes Paket zu verarbeiten. Dazu gehört das Auslesen der Steuerinformationen und die Überprüfung auf Übertragungsfehler. Diese Verzögerung liegt in der Größenordnung von Mikrosekunden oder weniger.
+
+### Warteschlangenverzögerung
+
+Die **Warteschlangenverzögerung** ist die Zeit, die ein Paket in der Warteschlange verbringt, bevor es weitergeleitet werden kann. Diese Verzögerung hängt von der Anzahl der Pakete in der Warteschlange und der Ankunftsrate der Pakete ab. Sie kann im Bereich von Mikro- bis Millisekunden liegen.
+
+### Übertragungsverzögerung
+
+Die **Übertragungsverzögerung** (Nachrichtendauer) ist die Zeit, die benötigt wird, um alle Bits eines Pakets zu senden. Sie hängt
+
+von der Paketlänge und der Übertragungsrate des Mediums ab und liegt ebenfalls im Bereich von Mikro- bis Millisekunden.
+
+### Signalverzögerung
+
+Die **Signalverzögerung** (Signalausbreitung) ist die Zeit, die ein Bit im Übertragungsmedium vom Sender zum Empfänger benötigt. Sie hängt von der Entfernung zwischen Sender und Empfänger sowie der Ausbreitungsgeschwindigkeit im Medium ab. Auch hier liegt die Größenordnung im Bereich von Mikro- bis Millisekunden.
+
+### Gesamte Netzverzögerung
+
+Die **Netzverzögerung** ist die Summe aller oben genannten Verzögerungen auf einem Ende-zu-Ende-Pfad. Wenn die Übertragungsrate auf allen Links gleich ist und die Warteschlangenverzögerung Null ist, ergibt sich die Netzverzögerung als einfache Summe der anderen Verzögerungen.
+
+### Roundtrip Delay (RTD)
+
+Das **Roundtrip Delay** ist die Summe aller Verzögerungen von der Quelle zum Ziel und zurück. Dabei ist zu beachten, dass die Antwortnachrichten nicht unbedingt denselben Pfad wie die Hinwegnachrichten nehmen müssen.
+
+### Praktisches Beispiel: Traceroute
+
+Ein nützliches Werkzeug zur Untersuchung der Paketwege und Verzögerungen in einem Netzwerk ist `Traceroute`. Mit diesem Befehl können Sie den Pfad und die Verzögerungen der Pakete von Ihrem Rechner zu einem Zielserver ermitteln.
+
+## Zusammenfassung und Ausblick
+
+In diesem dritten Teil des Kapitels haben wir die verschiedenen Verzögerungsarten in vermittelten Netzen kennengelernt und wie sie die Gesamtverzögerung beeinflussen. Im nächsten Schritt werden wir uns mit der Wegewahl beschäftigen und untersuchen, wie der beste Weg durch das Netz gefunden wird.
+
+---
+
+## Teil 4: Adressierung und Wegewahl
+
+### Einführung
+
+Herzlich Willkommen zur Vorlesung „Rechnernetze und Verteilte Systeme“. Wir befinden uns nach wie vor im Kapitel 4 mit der Vermittlungsschicht und dieses Teil 4 des Kapitels. Nachdem wir bereits die Vermittlung an sich kennengelernt haben, das heißt die Fahrtschaltung, um Daten von der Quelle zum Ziel übertragen zu können, wollen wir uns in diesem Teil mit der Wegewahl beschäftigen.
+
+### Wegewahl
+
+Bei der **Wegewahl** geht es darum, wie wir den Weg durch das Netz finden. Dazu müssen wir zwei Aspekte betrachten:
+
+1. **Adressierung**: Wie finden wir allgemein einen Teilnehmer oder einen Endpunkt im Netz?
+2. **Verfahren der Wegewahl**: Wie kommen wir von einem beliebigen Startpunkt zu einem Zielpunkt?
+
+Die Aufgabenstellung bleibt dieselbe: Alice möchte eine Nachricht an Bob senden. Wir wollen die Wolke namens Internet untersuchen und herausfinden, wie Alice den Teilnehmer Bob adressieren kann.
+
+### Adressierung
+
+Die Adressierung ist vergleichbar mit der Angabe einer physischen Adresse, z.B. wenn wir von der Oettingenstraße 67 zum Leibniz Rechenzentrum fahren wollen. Wir geben beide Ziele ein und lassen das System eine Route auswählen. Im Internet benötigen wir eine Methode, um Endpunkte eindeutig zu adressieren.
+
+Die Adressierung im Netz hat folgende Aspekte:
+
+- **Eindeutigkeit**: Jede Adresse muss eindeutig sein.
+- **Hierarchische Struktur**: Adressen können hierarchisch organisiert sein (z.B. Telefonnummern).
+- **Maschinelle Verarbeitung**: Adressen müssen maschinell effizient verarbeitet werden können.
+
+### Verfahren der Wegewahl
+
+Nachdem wir eine Adresse haben, müssen wir den Weg zum Ziel finden. Dies erfolgt durch Routing-Algorithmen, die den besten Pfad durch das Netzwerk bestimmen. Die Wegewahl umfasst folgende Schritte:
+
+1. **Vergleich der Zieladresse**: Jeder Knoten vergleicht die Zieladresse mit seiner eigenen.
+2. **Weiterleitung**: Wenn die Zieladresse nicht übereinstimmt, wird die Nachricht weitergeleitet.
+
+### Adressen und Namen
+
+Es gibt zwei wichtige Konzepte:
+
+1. **Namen**: Für Menschen leicht zu merkende Bezeichnungen (z.B. Oettingenstraße 67).
+2. **Adressen**: Maschinell verarbeitbare Identifikatoren.
+
+### Namensauflösung
+
+Die **Namensauflösung** ist der Prozess, bei dem ein Name in eine Adresse umgewandelt wird. Es gibt zwei Hauptmethoden:
+
+1. **Separater Dienst**: Nutzung des Internets, um Namen in Adressen umzuwandeln (z.B. Domain Name System, DNS).
+2. **Ableitung aus der Namensstruktur**: Direkte Zuordnung durch Hierarchie.
+
+Das **DNS** ist ein zentrales Beispiel für einen separaten Dienst, der Namensauflösung durchführt. Ein Benutzer gibt eine URL ein, und das DNS wandelt diese in eine IP-Adresse um.
+
+### Beispiel DNS
+
+Wenn ein Benutzer die Seite www.ivi.lmu.de aufruft, fragt der Browser den DNS-Server nach der zugehörigen IP-Adresse. Der DNS-Server antwortet mit der IP-Adresse, und der Browser kann die Verbindung herstellen.
+
+## Zusammenfassung und Ausblick
+
+In diesem vierten Teil des Kapitels haben wir die Grundlagen der Adressierung und Wegewahl im Internet kennengelernt. Im nächsten Schritt werden wir uns mit den spezifischen Routingverfahren beschäftigen, die diese Wegewahl umsetzen.
+
+---
+
+## Teil 5: Grundlagen der Routing-Verfahren
+
+### Einführung
+
+Herzlich Willkommen zur Vorlesung „Rechnernetze und Verteilte Systeme“. Wir sind im Kapitel 4, „Vermittlung“ und das ist Teil 5 des Kapitels. Die Aufgabe, die wir uns angesehen haben, ist, dass Alice eine Nachricht übers Internet an Bob schickt und wir wollten, dass hier entsprechend die Vermittlung durchgeführt wird. Wir haben uns letztes Mal auch schon mit der Adressierung und der Wegewahl auseinandergesetzt. Heute wollen wir etwas mehr in die allgemeinen Grundlagen der Routing-Verfahren reinsehen.
+
+### Routing-Verfahren
+
+Routing-Verfahren sind Algorithmen, die bestimmen, welche Wege im Netzwerk genommen werden. Diese Algorithmen basieren auf verschiedenen Strategien und Vorgaben, um den optimalen Weg zu finden. Dazu gehören:
+
+- **Routing-Strategien**: Vorgaben, die festlegen, wie Wege gewählt werden sollen (z.B. schnellster Weg, günstigster Weg).
+- **Policies**: Regeln, die bestimmte Wege bevorzugen oder vermeiden (z.B. Vermeidung von Startgebieten).
+- **Zielfunktionen**: Kriterien zur Optimierung der Wege (z.B. minimale Kosten, minimale Übertragungszeit).
+
+### Optimierungsziele und Eigenschaften
+
+Mögliche Optimierungsziele der Routing-Verfahren sind:
+
+- Geringe Übertragungskosten
+- Geringe Übertragungszeiten
+- Gute Leitungsauslastung
+- Großer Durchsatz
+
+Wichtige allgemeine Eigenschaften der Routing-Verfahren sind:
+
+- **Einfachheit**: Niedrige algorithmische Komplexität.
+- **Geringer Overhead**: Minimale Beeinflussung des Netzwerks.
+- **Adaptivität**: Anpassungsfähigkeit an Netzlast und Topologieänderungen.
+- **Robustheit**: Fähigkeit, auf Fehler zu reagieren.
+- **Fairness**: Gleichmäßige Verteilung des Netzverkehrs.
+
+### Herausforderungen
+
+Routing-Verfahren müssen folgende Herausforderungen bewältigen:
+
+- Zielkonflikte: Z.B. schnelle vs. kostengünstige Übertragung.
+- Beschreibung der Netzwerktopologie: Erfassung dynamischer und komplexer Netzstrukturen.
+- Wegbestimmung: Zentrale vs. dezentrale Wegbestimmung.
+- Informationsbereitstellung: Wer liefert die notwendigen Informationen zur Wegbestimmung?
+
+### Grafentheorie
+
+Die Grundlage der Routing-Verfahren bildet die Grafentheorie. Ein Netzwerk wird als Graph dargestellt, bestehend aus Knoten (Router) und Kanten (Links). Die Kanten sind mit Kostenattributen versehen, die die Übertragungskosten repräsentieren.
+
+## Kostenfunktion und Optimalität
+
+Die **Kostenfunktion** bestimmt die Kosten eines Pfades. Ein optimaler Weg minimiert die Summe der Kosten. Eine wichtige Eigenschaft ist, dass jeder Teilweg eines optimalen Weges ebenfalls optimal sein muss.
+
+## Quellen-Senken-Baum (QSB)
+
+Ein **Quellen-Senken-Baum** (QSB) stellt die Wege von einer Quelle zu mehreren Senken dar. Die Quelle ist die Wurzel des Baums, und die Ziele sind die Blätter. Mehrere QSBs sind möglich, und das Ziel des Routing-Verfahrens ist es, den QSB mit dem optimalen Weg zu wählen.
+
+## Praktisches Beispiel und Wegetafel
+
+Nehmen wir ein Netzwerk mit fünf Knoten. Vom Knoten 2 aus können wir mehrere Wege zu anderen Knoten wählen. Die Kosten der Wege werden in einer Wegetafel dargestellt, die die Ziele, die Zwischenknoten und die Kosten enthält. Der **Shortest Path First Algorithmus** (SPF) oder **Shortest Delay First Algorithmus** (SDF) wird verwendet, um den kürzesten Weg zu bestimmen.
+
+## Implementierung: Routing Tabelle
+
+Eine **Routing Tabelle** (Routing Information Base) speichert die Informationen für die Wegbestimmung. Jeder Knoten im Netzwerk führt eine eigene Routing Tabelle, die bei der Initialisierung des Systems erstellt und während des Betriebs aktualisiert wird.
+
+# Zusammenfassung und Ausblick
+
+In diesem fünften Teil des Kapitels haben wir die Grundlagen der Routing-Verfahren und ihre Herausforderungen kennengelernt. Im nächsten Schritt werden wir uns mit konkreten Routing-Algorithmen und deren Implementierung im Detail befassen.
+
 <!-- DISQUS SCRIPT COMMENT START -->
 
 <hr style="border: none; height: 2px; background: linear-gradient(to right, #f0f0f0, #ccc, #f0f0f0); margin-top: 4rem; margin-bottom: 5rem;">
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
